[tool.poetry]
name = "mini-auth-system"
version = "0.1.0"
description = ""
authors = ["Josh Ajiniran <josuajiniran@gmail.com>"]
readme = "README.md"
packages = [{include = "mini_auth_system"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
